--- a/DTRichTextEditor/Classes/DTLoupeView.html
+++ b/DTRichTextEditor/Classes/DTLoupeView.html
@@ -179,7 +179,9 @@
 					<div class="section section-overview">
 						<a title="Overview" name="overview"></a>
 						<h2 class="subtitle subtitle-overview">Overview</h2>
-						<p>DTLoupeView represents the &ldquo;magnifying glass&rdquo; shown when positining a caret or ranged selection</p>
+						<p>DTLoupeView represents the &ldquo;magnifying glass&rdquo; shown when positioning a caret or ranged selection. It has three different styles: the regular round loupe, a ranged selection loupe with an arrow at the bottom and a rectangual loupe without arrow.</p>
+
+<p>You should not create instances of DTLoupeView, but retrieve a reference to the shared loupe instance via <a href="#//api/name/sharedLoupe">sharedLoupe</a>.</p>
 					</div>
 					
 					
